--- a/Translation/PRP-Compat-Fogout-Int_en_it.xml
+++ b/Translation/PRP-Compat-Fogout-Int_en_it.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <SSTXMLRessources>
   <Params>
-    <Addon>PRP.esp</Addon>
+    <Addon>PRP-Compat-Fogout-Int.esp</Addon>
     <Source>en</Source>
     <Dest>it</Dest>
     <Version>2</Version>
@@ -152,18 +152,6 @@
       <Dest>Operazioni</Dest>
     </String>
     <String List="0">
-      <EDID>DLC04KiddieKingdomZ01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>King Cola&apos;s Castle Tower</Source>
-      <Dest>Torre del castello di King Cola</Dest>
-    </String>
-    <String List="0">
-      <EDID>DLC04NWJunkyardUFO01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Ultimate UFO</Source>
-      <Dest>Super UFO</Dest>
-    </String>
-    <String List="0">
       <EDID>ShawHighSchool01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Shaw High School</Source>
@@ -204,12 +192,6 @@
       <REC>CELL:FULL</REC>
       <Source>Vault 118</Source>
       <Dest>Vault 118</Dest>
-    </String>
-    <String List="0">
-      <EDID>DLC03PineCrestCavern01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Pine Crest Cavern</Source>
-      <Dest>Caverna di Pine Crest</Dest>
     </String>
     <String List="0">
       <EDID>GoodneighborHotelRexford</EDID>
@@ -428,12 +410,6 @@
       <Dest>Seminterrato Vim!</Dest>
     </String>
     <String List="0">
-      <EDID>DLC04WarehouseAmbush</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Ambush Warehouse Cell</Source>
-      <Dest>Ambush Warehouse Cell</Dest>
-    </String>
-    <String List="0">
       <EDID>RevereBeachStation01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Revere Beach Station</Source>
@@ -560,18 +536,6 @@
       <Dest>Ponte principale del Prydwen</Dest>
     </String>
     <String List="0">
-      <EDID>zUnusedTheaterLaundromat</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Quick Test Cell</Dest>
-    </String>
-    <String List="0">
-      <EDID>DLC04GZVaultTec01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Vault-Tec: Among the Stars</Source>
-      <Dest>Vault-Tec: Tra le stelle</Dest>
-    </String>
-    <String List="0">
       <EDID>TheCastle01</EDID>
       <REC>CELL:FULL</REC>
       <Source>The Castle Tunnels</Source>
@@ -626,12 +590,6 @@
       <Dest>Istituto - Sottolivello 21-D</Dest>
     </String>
     <String List="0">
-      <EDID>DLC03FringeCoveDocks01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Quick Test Cell</Dest>
-    </String>
-    <String List="0">
       <EDID>DLC04TransitCenter01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Nuka-World Transit Center</Source>
@@ -674,18 +632,6 @@
       <Dest>Rifugio</Dest>
     </String>
     <String List="0">
-      <EDID>WarehouseIndustrialMachines</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>The Incredible Machines</Source>
-      <Dest>La macchine incredibili</Dest>
-    </String>
-    <String List="0">
-      <EDID>ccTOSFO4001</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Noir Penthouse</Source>
-      <Dest>Attico noir</Dest>
-    </String>
-    <String List="0">
       <EDID>DmndDugoutInn01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Dugout Inn</Source>
@@ -696,12 +642,6 @@
       <REC>CELL:FULL</REC>
       <Source>Cambridge Police Station</Source>
       <Dest>Stazione di polizia di Cambridge</Dest>
-    </String>
-    <String List="0">
-      <EDID>REHoldingCell</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Quick Test Cell</Dest>
     </String>
     <String List="0">
       <EDID>MiltonGeneral01</EDID>
@@ -780,12 +720,6 @@
       <REC>CELL:FULL</REC>
       <Source>Lexington Parking Garage</Source>
       <Dest>Parcheggio Lexington</Dest>
-    </String>
-    <String List="0">
-      <EDID>zUnusedSubwayTerminalShowcase</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Terminals &amp; Holotapes, Oh My.</Source>
-      <Dest>Terminali e olonastri...</Dest>
     </String>
     <String List="0">
       <EDID>DLC04SafariWelcomeCenter</EDID>
@@ -1352,12 +1286,6 @@
       <Dest>Laboratorio VEF</Dest>
     </String>
     <String List="0">
-      <EDID>NorthEndSalemStreetCottage</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Cottage</Source>
-      <Dest>Cottage</Dest>
-    </String>
-    <String List="0">
       <EDID>HalluciGen01</EDID>
       <REC>CELL:FULL</REC>
       <Source>HalluciGen, Inc.</Source>
@@ -1442,12 +1370,6 @@
       <Dest>Punto d&apos;ascolto Bravo</Dest>
     </String>
     <String List="0">
-      <EDID>QASmoke</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Tunnels</Source>
-      <Dest>Gallerie</Dest>
-    </String>
-    <String List="0">
       <EDID>LongneckLukowskis01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Longneck Lukowski&apos;s Cannery</Source>
@@ -1526,12 +1448,6 @@
       <Dest>Vault 95</Dest>
     </String>
     <String List="0">
-      <EDID>WarehouseWorkbenches</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Workbench Bonanza</Source>
-      <Dest>Banco da lavoro e prosperità</Dest>
-    </String>
-    <String List="0">
       <EDID>WestonWaterTreatment01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Weston Water Treatment Plant</Source>
@@ -1542,6 +1458,12 @@
       <REC>CELL:FULL</REC>
       <Source>Ticker Tape Lounge</Source>
       <Dest>Sala del telegrafo</Dest>
+    </String>
+    <String List="0">
+      <EDID>MassFusion02Trans</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Mass Fusion Elevator</Source>
+      <Dest>Ascensore della Mass Fusion</Dest>
     </String>
     <String List="0">
       <EDID>InstituteBioScience</EDID>
@@ -1826,12 +1748,6 @@
       <Dest>Old North Church</Dest>
     </String>
     <String List="0">
-      <EDID>zUnusedTheater46A</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Quick Test Cell</Dest>
-    </String>
-    <String List="0">
       <EDID>CambridgeChurchGraveyard01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Union&apos;s Hope Cathedral</Source>
@@ -1866,12 +1782,6 @@
       <REC>CELL:FULL</REC>
       <Source>Charlestown Laundry</Source>
       <Dest>Lavanderia di Charlestown</Dest>
-    </String>
-    <String List="0">
-      <EDID>DBTechHighSchool02</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Medical Center Station</Source>
-      <Dest>Stazione del centro medico</Dest>
     </String>
     <String List="0">
       <EDID>VaultTecOffice01</EDID>
@@ -1910,12 +1820,6 @@
       <Dest>Istituto tecnico D.B.</Dest>
     </String>
     <String List="0">
-      <EDID>CombatZone02</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Quick Test Cell</Dest>
-    </String>
-    <String List="0">
       <EDID>DLC03AlderseaDaySpa01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Aldersea Day Spa</Source>
@@ -1938,12 +1842,6 @@
       <REC>CELL:FULL</REC>
       <Source>Basement</Source>
       <Dest>Scantinato</Dest>
-    </String>
-    <String List="0">
-      <EDID>RelayTowerInt05</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Storage Compartment</Source>
-      <Dest>Compartimento di deposito</Dest>
     </String>
     <String List="0">
       <EDID>DLC03Nucleus</EDID>
@@ -1974,12 +1872,6 @@
       <REC>CELL:FULL</REC>
       <Source>Apartments</Source>
       <Dest>Appartamenti</Dest>
-    </String>
-    <String List="0">
-      <EDID>WarehouseTraps</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>The most dangerous cell</Source>
-      <Dest>La cella più pericolosa</Dest>
     </String>
     <String List="0">
       <EDID>DmndGreenhouse01</EDID>
@@ -2040,60 +1932,6 @@
       <REC>CELL:FULL</REC>
       <Source>Museum of Witchcraft</Source>
       <Dest>Museo della stregoneria</Dest>
-    </String>
-    <String List="0">
-      <EDID>Commonwealth</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>Commonwealth</Source>
-      <Dest>Commonwealth</Dest>
-    </String>
-    <String List="0">
-      <EDID>DiamondCity</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>Diamond City</Source>
-      <Dest>Diamond City</Dest>
-    </String>
-    <String List="0">
-      <EDID>Goodneighbor</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>Goodneighbor</Source>
-      <Dest>Goodneighbor</Dest>
-    </String>
-    <String List="0">
-      <EDID>SanctuaryHillsWorld</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>Sanctuary Hills</Source>
-      <Dest>Sanctuary Hills</Dest>
-    </String>
-    <String List="0">
-      <EDID>DLC03FarHarbor</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>The Island</Source>
-      <Dest>L&apos;Isola</Dest>
-    </String>
-    <String List="0">
-      <EDID>DLC03VRWorldspace</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>Simulation</Source>
-      <Dest>Simulazione</Dest>
-    </String>
-    <String List="0">
-      <EDID>NukaWorld</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>Nuka-World</Source>
-      <Dest>Nuka-World</Dest>
-    </String>
-    <String List="0">
-      <EDID>NukaWorldAmphitheater</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>Bradberton Amphitheater</Source>
-      <Dest>Anfiteatro Bradberton</Dest>
-    </String>
-    <String List="0">
-      <EDID>NukaWorldMarket</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>Nuka-Town Market</Source>
-      <Dest>Mercato di Nuka-Town</Dest>
     </String>
   </Content>
 </SSTXMLRessources>
