--- a/Translation/PRP-Compat-UIL_en_it.xml
+++ b/Translation/PRP-Compat-UIL_en_it.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <SSTXMLRessources>
   <Params>
-    <Addon>PRP.esp</Addon>
+    <Addon>PRP-Compat-UIL.esp</Addon>
     <Source>en</Source>
     <Dest>it</Dest>
     <Version>2</Version>
@@ -156,12 +156,6 @@
       <REC>CELL:FULL</REC>
       <Source>King Cola&apos;s Castle Tower</Source>
       <Dest>Torre del castello di King Cola</Dest>
-    </String>
-    <String List="0">
-      <EDID>DLC04NWJunkyardUFO01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Ultimate UFO</Source>
-      <Dest>Super UFO</Dest>
     </String>
     <String List="0">
       <EDID>ShawHighSchool01</EDID>
@@ -332,12 +326,6 @@
       <Dest>Nascondiglio</Dest>
     </String>
     <String List="0">
-      <EDID>PrewarTVStudio</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Colonial&apos;s Department Store</Source>
-      <Dest>Emporio coloniale</Dest>
-    </String>
-    <String List="0">
       <EDID>SaugusIronworks01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Saugus Ironworks</Source>
@@ -428,12 +416,6 @@
       <Dest>Seminterrato Vim!</Dest>
     </String>
     <String List="0">
-      <EDID>DLC04WarehouseAmbush</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Ambush Warehouse Cell</Source>
-      <Dest>Ambush Warehouse Cell</Dest>
-    </String>
-    <String List="0">
       <EDID>RevereBeachStation01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Revere Beach Station</Source>
@@ -500,12 +482,6 @@
       <Dest>Edificio Dartmouth</Dest>
     </String>
     <String List="0">
-      <EDID>zUnusedFalloutShelter02</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Shelter</Source>
-      <Dest>Rifugio</Dest>
-    </String>
-    <String List="0">
       <EDID>DmndChoiceChops01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Polly&apos;s House</Source>
@@ -560,12 +536,6 @@
       <Dest>Ponte principale del Prydwen</Dest>
     </String>
     <String List="0">
-      <EDID>zUnusedTheaterLaundromat</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Quick Test Cell</Dest>
-    </String>
-    <String List="0">
       <EDID>DLC04GZVaultTec01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Vault-Tec: Among the Stars</Source>
@@ -596,12 +566,6 @@
       <Dest>Wattz Electronics</Dest>
     </String>
     <String List="0">
-      <EDID>MQ203KelloggsBrain</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Memories</Source>
-      <Dest>Ricordi</Dest>
-    </String>
-    <String List="0">
       <EDID>DLC04SafariBearCave</EDID>
       <REC>CELL:FULL</REC>
       <Source>Bear Cave</Source>
@@ -618,18 +582,6 @@
       <REC>CELL:FULL</REC>
       <Source>Fraternal Post 115</Source>
       <Dest>Avamposto confraternita 115</Dest>
-    </String>
-    <String List="0">
-      <EDID>InstituteCave</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Institute Sublevel 21-D</Source>
-      <Dest>Istituto - Sottolivello 21-D</Dest>
-    </String>
-    <String List="0">
-      <EDID>DLC03FringeCoveDocks01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Quick Test Cell</Dest>
     </String>
     <String List="0">
       <EDID>DLC04TransitCenter01</EDID>
@@ -674,18 +626,6 @@
       <Dest>Rifugio</Dest>
     </String>
     <String List="0">
-      <EDID>WarehouseIndustrialMachines</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>The Incredible Machines</Source>
-      <Dest>La macchine incredibili</Dest>
-    </String>
-    <String List="0">
-      <EDID>ccTOSFO4001</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Noir Penthouse</Source>
-      <Dest>Attico noir</Dest>
-    </String>
-    <String List="0">
       <EDID>DmndDugoutInn01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Dugout Inn</Source>
@@ -696,12 +636,6 @@
       <REC>CELL:FULL</REC>
       <Source>Cambridge Police Station</Source>
       <Dest>Stazione di polizia di Cambridge</Dest>
-    </String>
-    <String List="0">
-      <EDID>REHoldingCell</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Quick Test Cell</Dest>
     </String>
     <String List="0">
       <EDID>MiltonGeneral01</EDID>
@@ -782,12 +716,6 @@
       <Dest>Parcheggio Lexington</Dest>
     </String>
     <String List="0">
-      <EDID>zUnusedSubwayTerminalShowcase</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Terminals &amp; Holotapes, Oh My.</Source>
-      <Dest>Terminali e olonastri...</Dest>
-    </String>
-    <String List="0">
       <EDID>DLC04SafariWelcomeCenter</EDID>
       <REC>CELL:FULL</REC>
       <Source>Safari Adventure Welcome Center</Source>
@@ -858,12 +786,6 @@
       <REC>CELL:FULL</REC>
       <Source>Gunners Plaza Basement</Source>
       <Dest>Seminterrato del centro dei Gunner</Dest>
-    </String>
-    <String List="0">
-      <EDID>ThicketExcavations01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Thicket Excavations</Source>
-      <Dest>Thicket Excavations</Dest>
     </String>
     <String List="0">
       <EDID>FensParkviewApartments02</EDID>
@@ -1124,12 +1046,6 @@
       <Dest>Custom House Tower</Dest>
     </String>
     <String List="0">
-      <EDID>InstituteSRB</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Institute SRB</Source>
-      <Dest>Istituto - URS</Dest>
-    </String>
-    <String List="0">
       <EDID>RelayTowerInt17</EDID>
       <REC>CELL:FULL</REC>
       <Source>Storage</Source>
@@ -1166,12 +1082,6 @@
       <Dest>Back Alley Bowling</Dest>
     </String>
     <String List="0">
-      <EDID>zUnusedGrenades</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Cellar</Source>
-      <Dest>Cantina</Dest>
-    </String>
-    <String List="0">
       <EDID>TheaterMassBayMedicalCenter01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Mass Bay Medical Center</Source>
@@ -1188,12 +1098,6 @@
       <REC>CELL:FULL</REC>
       <Source>Fizztop Grille</Source>
       <Dest>Fizztop Grille</Dest>
-    </String>
-    <String List="0">
-      <EDID>zUnusedCave</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Breakheart Banks</Source>
-      <Dest>Breakheart Banks</Dest>
     </String>
     <String List="0">
       <EDID>ShenleysOysterBar01</EDID>
@@ -1242,18 +1146,6 @@
       <REC>CELL:FULL</REC>
       <Source>Primate House</Source>
       <Dest>Casa dei primati</Dest>
-    </String>
-    <String List="0">
-      <EDID>InstituteOldRobotics01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Old Robotics</Source>
-      <Dest>Vecchio dipartimento di robotica</Dest>
-    </String>
-    <String List="0">
-      <EDID>zUnusedFinancial23</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Atlantic Offices</Source>
-      <Dest>Uffici Atlantic</Dest>
     </String>
     <String List="0">
       <EDID>GwinnettBrewery02</EDID>
@@ -1328,22 +1220,10 @@
       <Dest>Teatro Warren</Dest>
     </String>
     <String List="0">
-      <EDID>InstituteRobotics</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Institute Robotics</Source>
-      <Dest>Istituto - Robotica</Dest>
-    </String>
-    <String List="0">
       <EDID>DLC04Gauntlet01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Nuka-World Access Tunnels</Source>
       <Dest>Gallerie d&apos;accesso a Nuka-World</Dest>
-    </String>
-    <String List="0">
-      <EDID>SanctuaryRosaHouse</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Rosa Residence</Source>
-      <Dest>Residenza Rosa</Dest>
     </String>
     <String List="0">
       <EDID>InstituteFEVlab</EDID>
@@ -1394,12 +1274,6 @@
       <Dest>Ospedale Psichiatrico Parsons</Dest>
     </String>
     <String List="0">
-      <EDID>zUnusedCellar02</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Cellar</Source>
-      <Dest>Cantina</Dest>
-    </String>
-    <String List="0">
       <EDID>zLexingtonLaundromat</EDID>
       <REC>CELL:FULL</REC>
       <Source>Lexington Laundromat</Source>
@@ -1440,12 +1314,6 @@
       <REC>CELL:FULL</REC>
       <Source>Listening Post Bravo</Source>
       <Dest>Punto d&apos;ascolto Bravo</Dest>
-    </String>
-    <String List="0">
-      <EDID>QASmoke</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Tunnels</Source>
-      <Dest>Gallerie</Dest>
     </String>
     <String List="0">
       <EDID>LongneckLukowskis01</EDID>
@@ -1526,12 +1394,6 @@
       <Dest>Vault 95</Dest>
     </String>
     <String List="0">
-      <EDID>WarehouseWorkbenches</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Workbench Bonanza</Source>
-      <Dest>Banco da lavoro e prosperità</Dest>
-    </String>
-    <String List="0">
       <EDID>WestonWaterTreatment01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Weston Water Treatment Plant</Source>
@@ -1542,12 +1404,6 @@
       <REC>CELL:FULL</REC>
       <Source>Ticker Tape Lounge</Source>
       <Dest>Sala del telegrafo</Dest>
-    </String>
-    <String List="0">
-      <EDID>InstituteBioScience</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Institute BioScience</Source>
-      <Dest>Istituto - Bioscienze</Dest>
     </String>
     <String List="0">
       <EDID>DLC03Acadia</EDID>
@@ -1766,12 +1622,6 @@
       <Dest>Club degli hobbisti elettronici</Dest>
     </String>
     <String List="0">
-      <EDID>DLC03POI40Int</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Pump Control</Source>
-      <Dest>Controllo della pompa</Dest>
-    </String>
-    <String List="0">
       <EDID>MaldenCenter01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Malden Center</Source>
@@ -1824,12 +1674,6 @@
       <REC>CELL:FULL</REC>
       <Source>Old North Church</Source>
       <Dest>Old North Church</Dest>
-    </String>
-    <String List="0">
-      <EDID>zUnusedTheater46A</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Quick Test Cell</Dest>
     </String>
     <String List="0">
       <EDID>CambridgeChurchGraveyard01</EDID>
@@ -1886,12 +1730,6 @@
       <Dest>Seminterrato del Parsons</Dest>
     </String>
     <String List="0">
-      <EDID>Vault111Start</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Vault 111 Main Entrance</Source>
-      <Dest>Ingresso principale Vault 111</Dest>
-    </String>
-    <String List="0">
       <EDID>DmndRadio01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Diamond City Radio</Source>
@@ -1908,12 +1746,6 @@
       <REC>CELL:FULL</REC>
       <Source>D.B. Technical High School</Source>
       <Dest>Istituto tecnico D.B.</Dest>
-    </String>
-    <String List="0">
-      <EDID>CombatZone02</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Quick Test Cell</Dest>
     </String>
     <String List="0">
       <EDID>DLC03AlderseaDaySpa01</EDID>
@@ -1976,12 +1808,6 @@
       <Dest>Appartamenti</Dest>
     </String>
     <String List="0">
-      <EDID>WarehouseTraps</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>The most dangerous cell</Source>
-      <Dest>La cella più pericolosa</Dest>
-    </String>
-    <String List="0">
       <EDID>DmndGreenhouse01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Greenhouse</Source>
@@ -2012,12 +1838,6 @@
       <Dest>Armeria del seminterrato</Dest>
     </String>
     <String List="0">
-      <EDID>DLC06VaultWorkshop</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Vault 88</Source>
-      <Dest>Vault 88</Dest>
-    </String>
-    <String List="0">
       <EDID>DLC04KiddieKingdomTheater01</EDID>
       <REC>CELL:FULL</REC>
       <Source>King Cola&apos;s Court</Source>
@@ -2040,60 +1860,6 @@
       <REC>CELL:FULL</REC>
       <Source>Museum of Witchcraft</Source>
       <Dest>Museo della stregoneria</Dest>
-    </String>
-    <String List="0">
-      <EDID>Commonwealth</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>Commonwealth</Source>
-      <Dest>Commonwealth</Dest>
-    </String>
-    <String List="0">
-      <EDID>DiamondCity</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>Diamond City</Source>
-      <Dest>Diamond City</Dest>
-    </String>
-    <String List="0">
-      <EDID>Goodneighbor</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>Goodneighbor</Source>
-      <Dest>Goodneighbor</Dest>
-    </String>
-    <String List="0">
-      <EDID>SanctuaryHillsWorld</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>Sanctuary Hills</Source>
-      <Dest>Sanctuary Hills</Dest>
-    </String>
-    <String List="0">
-      <EDID>DLC03FarHarbor</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>The Island</Source>
-      <Dest>L&apos;Isola</Dest>
-    </String>
-    <String List="0">
-      <EDID>DLC03VRWorldspace</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>Simulation</Source>
-      <Dest>Simulazione</Dest>
-    </String>
-    <String List="0">
-      <EDID>NukaWorld</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>Nuka-World</Source>
-      <Dest>Nuka-World</Dest>
-    </String>
-    <String List="0">
-      <EDID>NukaWorldAmphitheater</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>Bradberton Amphitheater</Source>
-      <Dest>Anfiteatro Bradberton</Dest>
-    </String>
-    <String List="0">
-      <EDID>NukaWorldMarket</EDID>
-      <REC>WRLD:FULL</REC>
-      <Source>Nuka-Town Market</Source>
-      <Dest>Mercato di Nuka-Town</Dest>
     </String>
   </Content>
 </SSTXMLRessources>
