--- a/Translation/AlootHomePlate_en_ja.xml
+++ b/Translation/AlootHomePlate_en_ja.xml
@@ -7,20 +7,18 @@
     <Version>2</Version>
   </Params>
   <Content>
-    <String List="0" Partial="1">
+    <String List="0" Partial="2">
       <EDID>[00000000]</EDID>
       <REC>TES4:CNAM</REC>
       <Source>Aloot</Source>
       <Dest>Aloot</Dest>
     </String>
-    <String List="0" Partial="1">
+    <String List="0" Partial="2">
       <EDID>[00000000]</EDID>
       <REC>TES4:SNAM</REC>
-      <Source>Aloot&apos;s Home Plate 2.2 PRP Edition
-
+      <Source>Aloot&apos;s Home Plate 2.3 
 https://www.nexusmods.com/fallout4/mods/44101</Source>
-      <Dest>Aloot&apos;s Home Plate 2.2 PRP Edition
-
+      <Dest>Aloot&apos;s Home Plate 2.3 
 https://www.nexusmods.com/fallout4/mods/44101</Dest>
     </String>
     <String List="0" Partial="2">
@@ -72,18 +70,6 @@ https://www.nexusmods.com/fallout4/mods/44101</Dest>
       <Dest>ジェネレータ</Dest>
     </String>
     <String List="0">
-      <EDID>ALOOT_HP_FederalistDresserShort01</EDID>
-      <REC>CONT:FULL</REC>
-      <Source>Dresser</Source>
-      <Dest>ドレッサー</Dest>
-    </String>
-    <String List="0">
-      <EDID>ALOOT_HP_DogArmorTrunk</EDID>
-      <REC>CONT:FULL</REC>
-      <Source>Dog Armor Trunk</Source>
-      <Dest>犬用アーマートランク</Dest>
-    </String>
-    <String List="0">
       <EDID>ALOOT_HomePlate_WorkshopWorkbench</EDID>
       <REC>CONT:FULL</REC>
       <Source>Workshop</Source>
@@ -126,16 +112,16 @@ https://www.nexusmods.com/fallout4/mods/44101</Dest>
       <Dest>キャビネット</Dest>
     </String>
     <String List="0">
-      <EDID>ALOOT_HP_AmmoBox</EDID>
+      <EDID>ALOOT_HP_FederalistDresserShort01</EDID>
       <REC>CONT:FULL</REC>
-      <Source>Ammo Box</Source>
-      <Dest>弾薬箱</Dest>
+      <Source>Dresser</Source>
+      <Dest>ドレッサー</Dest>
     </String>
     <String List="0">
-      <EDID>ALOOT_HP_WoodCrateContainer</EDID>
+      <EDID>ALOOT_HP_DogArmorTrunk</EDID>
       <REC>CONT:FULL</REC>
-      <Source>Wooden Crate</Source>
-      <Dest>木枠</Dest>
+      <Source>Dog Armor Trunk</Source>
+      <Dest>犬用アーマートランク</Dest>
     </String>
     <String List="0">
       <EDID>ALOOT_HP_FootLocker</EDID>
@@ -246,22 +232,22 @@ https://www.nexusmods.com/fallout4/mods/44101</Dest>
       <Dest>ロッカー</Dest>
     </String>
     <String List="0">
+      <EDID>ALOOT_HP_AmmoBox</EDID>
+      <REC>CONT:FULL</REC>
+      <Source>Ammo Box</Source>
+      <Dest>弾薬箱</Dest>
+    </String>
+    <String List="0">
+      <EDID>ALOOT_HP_WoodCrateContainer</EDID>
+      <REC>CONT:FULL</REC>
+      <Source>Wooden Crate</Source>
+      <Dest>木枠</Dest>
+    </String>
+    <String List="0">
       <EDID>ALOOT_HP_SlidingDoor</EDID>
       <REC>DOOR:FULL</REC>
       <Source>Door</Source>
       <Dest>ドア</Dest>
-    </String>
-    <String List="0">
-      <EDID>ALOOT_Static_Carpet02</EDID>
-      <REC>STAT:FULL</REC>
-      <Source>Rug</Source>
-      <Dest>ラグ</Dest>
-    </String>
-    <String List="0">
-      <EDID>ALOOT_Static_Poster01</EDID>
-      <REC>STAT:FULL</REC>
-      <Source>Poster</Source>
-      <Dest>ポスター</Dest>
     </String>
     <String List="0">
       <EDID>DinerIntCounter01</EDID>
@@ -438,16 +424,16 @@ https://www.nexusmods.com/fallout4/mods/44101</Dest>
       <Dest>描画</Dest>
     </String>
     <String List="0">
-      <EDID>ALOOT_Static_Key02</EDID>
+      <EDID>ALOOT_Static_Carpet02</EDID>
       <REC>STAT:FULL</REC>
-      <Source>Key</Source>
-      <Dest>キー</Dest>
+      <Source>Rug</Source>
+      <Dest>ラグ</Dest>
     </String>
     <String List="0">
-      <EDID>ALOOT_Static_BottleWine01</EDID>
+      <EDID>ALOOT_Static_Poster01</EDID>
       <REC>STAT:FULL</REC>
-      <Source>Wine</Source>
-      <Dest>ワイン</Dest>
+      <Source>Poster</Source>
+      <Dest>ポスター</Dest>
     </String>
     <String List="0">
       <EDID>ALOOT_Static_Poster02</EDID>
@@ -870,16 +856,16 @@ https://www.nexusmods.com/fallout4/mods/44101</Dest>
       <Dest>時計</Dest>
     </String>
     <String List="0">
-      <EDID>ALOOT_Static_ProtectronDebris3</EDID>
+      <EDID>ALOOT_Static_Key02</EDID>
       <REC>STAT:FULL</REC>
-      <Source>Protectron Debris</Source>
-      <Dest>プロテクトロンの砕片</Dest>
+      <Source>Key</Source>
+      <Dest>キー</Dest>
     </String>
     <String List="0">
-      <EDID>ALOOT_Static_TerminalBroken02</EDID>
+      <EDID>ALOOT_Static_BottleWine01</EDID>
       <REC>STAT:FULL</REC>
-      <Source>Broken Terminal</Source>
-      <Dest>壊れたターミナル</Dest>
+      <Source>Wine</Source>
+      <Dest>ワイン</Dest>
     </String>
     <String List="0">
       <EDID>ALOOT_Static_CottonYarnSpool</EDID>
@@ -2003,11 +1989,11 @@ https://www.nexusmods.com/fallout4/mods/44101</Dest>
       <Source>Painting</Source>
       <Dest>描画</Dest>
     </String>
-    <String List="0">
+    <String List="0" Partial="1">
       <EDID>ALOOT_Static_QuebecFlag</EDID>
       <REC>STAT:FULL</REC>
-      <Source>Le Drapeau du Québec</Source>
-      <Dest>ケベック州旗</Dest>
+      <Source>The Flag of Quebec</Source>
+      <Dest>ケベック州の旗</Dest>
     </String>
     <String List="0">
       <EDID>ALOOT_Static_MetalBarrel01</EDID>
@@ -2490,16 +2476,16 @@ https://www.nexusmods.com/fallout4/mods/44101</Dest>
       <Dest>プロテクトロンの砕片</Dest>
     </String>
     <String List="0">
-      <EDID>ALOOT_HP_WeightBench</EDID>
-      <REC>FURN:FULL</REC>
-      <Source>Bench</Source>
-      <Dest>ベンチ</Dest>
+      <EDID>ALOOT_Static_ProtectronDebris3</EDID>
+      <REC>STAT:FULL</REC>
+      <Source>Protectron Debris</Source>
+      <Dest>プロテクトロンの砕片</Dest>
     </String>
     <String List="0">
-      <EDID>ALOOT_HP_ChemicalShower</EDID>
-      <REC>FURN:FULL</REC>
-      <Source>Shower</Source>
-      <Dest>シャワー</Dest>
+      <EDID>ALOOT_Static_TerminalBroken02</EDID>
+      <REC>STAT:FULL</REC>
+      <Source>Broken Terminal</Source>
+      <Dest>壊れたターミナル</Dest>
     </String>
     <String List="0">
       <EDID>ALOOT_HP_MetalOfficeChairWithWriting</EDID>
@@ -2520,16 +2506,16 @@ https://www.nexusmods.com/fallout4/mods/44101</Dest>
       <Dest>テーブル</Dest>
     </String>
     <String List="0">
-      <EDID>ALOOT_HP_DogBed</EDID>
+      <EDID>ALOOT_HP_WeightBench</EDID>
       <REC>FURN:FULL</REC>
-      <Source>Dog Bed</Source>
-      <Dest>犬用ベッド</Dest>
+      <Source>Bench</Source>
+      <Dest>ベンチ</Dest>
     </String>
     <String List="0">
-      <EDID>ALOOT_HP_CookingStation</EDID>
+      <EDID>ALOOT_HP_ChemicalShower</EDID>
       <REC>FURN:FULL</REC>
-      <Source>Cooking Stove</Source>
-      <Dest>調理用コンロ</Dest>
+      <Source>Shower</Source>
+      <Dest>シャワー</Dest>
     </String>
     <String List="0">
       <EDID>ALOOT_HP_Couch</EDID>
@@ -2554,6 +2540,18 @@ https://www.nexusmods.com/fallout4/mods/44101</Dest>
       <REC>FURN:FULL</REC>
       <Source>Chair</Source>
       <Dest>イス</Dest>
+    </String>
+    <String List="0">
+      <EDID>ALOOT_HP_DogBed</EDID>
+      <REC>FURN:FULL</REC>
+      <Source>Dog Bed</Source>
+      <Dest>犬用ベッド</Dest>
+    </String>
+    <String List="0">
+      <EDID>ALOOT_HP_CookingStation</EDID>
+      <REC>FURN:FULL</REC>
+      <Source>Cooking Stove</Source>
+      <Dest>調理用コンロ</Dest>
     </String>
     <String List="0">
       <EDID>ALOOT_HP_NpcChairVaultSit01</EDID>
