Update PTBR translations from last seen archive, the Aloot one needs verified against 2.3

--- a/Translation/PRP_en_ptbr.xml
+++ b/Translation/PRP_en_ptbr.xml
@@ -1637,7 +1637,7 @@
       <EDID>DunwichBorers01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Dunwich Borers</Source>
-      <Dest>Dunwich Borers</Dest>
+      <Dest>Brocas de Dunwich</Dest>
     </String>
     <String List="0">
       <EDID>WestEverettEstates01</EDID>
